# platform-db-migrate

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
dbt_project/: dbt_project.yml
dbt_project/macros/: calculate_bmi.sql  clean_nic.sql  generate_version_number.sql  safe_cast.sql
dbt_project/models/marts/core/: facilities.sql  schema.yml  user_facilities.sql  users.sql
dbt_project/models/marts/lookups/: lookup_complication_types.sql  lookup_diagnosis_types.sql  lookup_education_levels.sql  lookup_followup_types.sql  lookup_medications.sql  lookup_test_types.sql  lookup_units.sql  schema.yml
dbt_project/models/marts/patients/: patient_transfers.sql  patient_versions.sql  patients.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_backoffice_user_preferences.sql  stg_patient_followups.sql  stg_patient_history.sql  stg_patient_latest_data.sql  stg_patients.sql  stg_roles.sql  stg_users.sql
dbt_project/seeds/lookups/: complication_types.csv  diagnosis_types.csv  education_levels.csv  facility_mapping.csv  followup_types.csv  medications.csv  test_types.csv  units.csv
